# tauri-plugin-store

./: .gitignore  Cargo.toml  README.md  api-iife.js  package.json  pnpm-lock.yaml
.changes/: README.md  add-builder.md  add-methods.md  change-types.md  config.json  fix-save-location.md  fix-types.md  rename-structs.md
.github/: CONTRIBUTING.md
.github/workflows/: audit.yml  clippy.yml  covector-status.yml  covector-version-or-publish.yaml  covector-version-or-publish.yaml.disabled  format.yml  test.yml
dist-js/: index.cjs  index.d.ts  index.js  index.min.js  index.min.js.map  index.mjs  index.mjs.map
docs/: index.html  modules.html
docs/assets/: highlight.css  search.js
docs/classes/: Store.html
examples/svelte-app/: package.json
examples/svelte-app/src/: App.svelte
examples/svelte-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/svelte-app/src-tauri/src/: main.rs
src/: error.rs  lib.rs  store.rs  store_file.rs
webview-dist/: index.d.ts  index.js  index.min.js  index.mjs
webview-src/: index.ts  rollup.config.js  tsconfig.json
