[package]
name = "tauri-plugin-store"
version = "0.0.0"
authors = [ "Tauri Programme within The Commons Conservancy" ]
description = "A Tauri plugin for simple data persistency"
edition = "2021"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]
license = "Apache-2.0 OR MIT"

[dependencies]
tauri = "1.0.0-rc.1"
serde = "1.0"
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"

[features]
